# research-paper-ai-assistant

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
core/: __init__.py  chain.py  embedding.py  ingestion.py  metadata_extractor.py  schema.py  vector_store.py
tools/: __init__.py  semantic_scholar.py  tavily_search.py
ui/: chat.py  components.py  dashboard.py  trends.py
